# openai-compatible-claude-adapter

./: pyproject.toml
openai_compatible_adapter/: README.md  __init__.py  anthropic_openai_adapter.py  server.py
