[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-compatible-claude-adapter"
version = "0.1.0"
description = "Anthropic Messages API facade for OpenAI-compatible chat completions endpoints"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "AIRP"}]

[project.scripts]
openai-compatible-claude-adapter = "openai_compatible_adapter.server:main"
